src/test/deca/syntax/valid/parser/with_object/class_with_decl_one_field.deca
class A{
	protected int x;
}