src/test/deca/syntax/invalid/parser/oracle/field_visibility_typo.deca
class A { protecte int a;}